[FIX] web, *: fix buttons squashing and spacing
*: calendar, google_calendar, microsoft_calendar;

task-3410165
part of task-3326263

X-original-commit: b680a6ac5769bf8e02921a9548792c7696992955

--- a/addons/web/static/src/views/calendar/calendar_controller.scss
+++ b/addons/web/static/src/views/calendar/calendar_controller.scss
@@ -34,7 +34,7 @@ $o-cw-filter-avatar-size: 20px;
         }
         // sync buttons are only displayed on calendar.event views
         .o_calendar_sync {
-            padding-top: 0.5em;
+            padding-bottom: 0.5em;
         }
     }
 
